--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.4.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sample-firestore": "file:"
   }
 }
